Fix white gap on home page

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -1,7 +1,11 @@
 /* Move down content because we have a fixed navbar that is ~50px tall */
 body {
-  padding-top: 70px;
+  padding-top: 50px;
   padding-bottom: 20px;
+}
+
+.spacer {
+  padding-top: 20px;
 }
 
 .bold {
